tests/NormalTests/paczka1/fuzzy1/15564671.err
Error in line 8: S391 S836 50,9
Error in line 15: kvW S836 22,9
Error in line 20: kvW A106 50,4
Error in line 26: thAj3EcjVZ S836 96,8
Error in line 27: yo4Qq5PR8 A106 31,4
Error in line 29: thAj3EcjVZ S391 95,8
